--- a/server/package.json
+++ b/server/package.json
@@ -25,13 +25,13 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
-    "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3"
+    "@babel/preset-env": "^7.8.3",
+    "nodemon": "^2.0.2"
   }
 }
