--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interface_repartie_backend",
+  "name": "flms_backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SimonSerrano/interface_repartie_backend.git"
+    "url": "git+https://github.com/MarionMarg/programmable-web.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SimonSerrano/interface_repartie_backend/issues"
+    "url": "https://github.com/MarionMarg/programmable-web/issues"
   },
-  "homepage": "https://github.com/SimonSerrano/interface_repartie_backend#readme",
+  "homepage": "https://github.com/MarionMarg/programmable-web#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
