--- a/front-flms/package.json
+++ b/front-flms/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "sweetalert2-react": "^0.8.3",
     "url-join": "^4.0.1"
   },
   "scripts": {
