--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "unzipper": "^0.10.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
