--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "buffer": "^5.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-server": "^0.12.1",
