--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "./node_modules/.bin/babel-node src/index.js",
     "build": "./node_modules/.bin/babel src/ -d build/ -s",
     "dist": "./node_modules/.bin/babel src/ -d dist/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,13 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "buffer": "^5.4.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-server": "^0.12.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.0.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
